<resources>
    <string name="app_name">RangeFinder</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_radius">Enter Radius in kms</string>
    <string name="hint_Desc">Enter Description..</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_prologin">Professional Login</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_proregister">Professional Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_location">Rate Location</string>
    <string name="btn_getusers">Get nearby users</string>
    <string name="btn_updateratings">UPDATE RATINGS</string>
    <string name="general_rating">Your overall rating is : </string>
    <string-array name="profession_array">
        <item>cafe</item>
        <item>bar-club</item>
        <item>restaurant</item>
        <item>bakery</item>
        <item>Fast-food</item>
        <item>Wine-bar</item>
    </string-array>
</resources>
