<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context="com.diplomatiki.krikonis.rangefinder.app.app.MapsActivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_logut_bg"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btngetloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_location"
        android:text="@string/btn_location"
        android:layout_above="@+id/btn_showusers"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:numStars="10"
        android:rating="3"
        android:stepSize="1"
        android:layout_below="@+id/proaddress"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_showusers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogout"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/btn_getusers" />

    <TextView
        android:id="@+id/proaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="Address will updated...."
        android:layout_below="@+id/map"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btngetloc"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_radius"
        android:inputType="number" />

</RelativeLayout>